fixed ipad layout issues

--- a/css/index.css
+++ b/css/index.css
@@ -735,6 +735,7 @@ p {
   justify-content: center;
   align-items: flex-start;
   width: 100%;
+  margin: 0px 2%;
 }
 @media (max-width: 600px) {
   .suspect-content .top-sec .tab .tab-stuff {
@@ -816,6 +817,12 @@ p {
 .suspect-content .top-sec .tab .tab-stuff img {
   height: 55vh;
   padding-bottom: 20px;
+}
+@media (max-width: 950px) {
+  .suspect-content .top-sec .tab .tab-stuff img {
+    width: 95%;
+    height: auto;
+  }
 }
 @media (max-width: 600px) {
   .suspect-content .top-sec .tab .tab-stuff img {
@@ -1043,10 +1050,22 @@ p {
     height: auto;
   }
 }
+@media (max-width: 950px) {
+  .weapon-content .top-sec .tab .tab-stuff .bottle {
+    width: 20%;
+    height: auto;
+  }
+}
 @media (max-width: 600px) {
   .weapon-content .top-sec .tab .tab-stuff .bottle {
     width: 20%;
     object-fit: cover;
+    height: auto;
+  }
+}
+@media (max-width: 950px) {
+  .weapon-content .top-sec .tab .tab-stuff .knife {
+    width: 60%;
     height: auto;
   }
 }
