--- a/less/suspect.less
+++ b/less/suspect.less
@@ -56,6 +56,7 @@
             .tab-stuff {
                 .flex(row,center, flex-start);
                width:100%;
+               margin: 0px 2%;
                @media(max-width:600px) {
                 .flex(column,center, center);
                 margin: 0
@@ -107,11 +108,14 @@
                 img {
                     height: 55vh;
                     padding-bottom: 20px;
+                    @media(max-width: 950px) {
+                        width: 95%;
+                        height: auto;
+                    }
                     @media(max-width:600px) {
                         width: 95%;
                         height: auto;
                         padding-bottom: 10px;
-        
                     }
                 }
     
