--- a/less/weapon.less
+++ b/less/weapon.less
@@ -92,6 +92,11 @@
                 }
     
                 .bottle {
+                    @media(max-width:950px) {
+                        width: 20%;
+                        height: auto;
+    
+                    }
                     @media(max-width:600px) {
                         width: 20%;
                         object-fit: cover;
@@ -101,6 +106,11 @@
                 }
     
                 .knife {
+                    @media(max-width:950px) {
+                        width: 60%;
+                        height: auto;
+    
+                    }
                     @media(max-width:600px) {
                         width: 50%;
                         object-fit: cover;
